--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <label for="site">site</label><input type="url"><br>
             <input type="submit" value="Envoyer">
         </form>  
-           
+           <a href="./information.html"> suite</a>
     </body>
 </html>
 </body>
