--- a/information.html
+++ b/information.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Page en construction</h1>
+    <h1>Page en construction ....!!!!</h1>
 </body>
 </html>
